--- a/CadenSite/package.json
+++ b/CadenSite/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^11.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-tooltip": "^5.28.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0"
   },
